fix: spacing issue in subsections

--- a/main/src/resources/doc/styles.css
+++ b/main/src/resources/doc/styles.css
@@ -483,7 +483,7 @@ main h2 {
 }
 
 .subsection > div {
-    margin-top: 0.5rem;
+    padding: 0.5rem 0;
 }
 .subsection > div:not(:last-child) {
     border-bottom: 1px solid var(--border-color);
